--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,17 +7,28 @@
   "COMPANY":{
     "SEARCH": "Search",
     "COMPANIES": "Companies",
+    "COMPANY": "Company",
     "COMPUTERS": "Computers",
     "CREATE": "Create a new company",
     "NAME": "Name",
+    "URL": "Image URL",
     "SEE": "See computers",
     "DELETE": "Delete",
-    "LIST": "List computers",
-    "DEL_COMPANY": "Delete company"
+    "DELETE_COMPANY": "Delete a company",
+    "CONFIRM_DELETION": "Are you sure you want to delete {{name}} It will also delete its {{number}} computers.",
+    "UPDATE_COMPANY": "Update a company",
+    "DELETE_SUCCESS": "Company successfully deleted",
+    "CREATE_SUCCESS": "Company successfully created",
+    "UPDATE_SUCCESS": "Company successfully updated",
+    "ERROR":{
+      "NAME": "Name of company is required",
+      "URL": "URL should be correct "
+    }
   },
   "COMPUTER":{
     "SEARCH": "Search",
     "COMPUTERS": "Computers",
+    "COMPUTER": "Computer",
     "CREATE": "Create a new computer",
     "NAME": "Name",
     "INTRODUCED": "Introduced",
@@ -26,16 +37,34 @@
     "DEL_COMPUTER": "Delete computer"
   },
   "LOGIN":{
+    "CREATE": "Account creation",
+    "CREATE_ACCOUNT": "Create an account",
     "LOG_IN": "Log in",
     "LOGIN": "Login",
+    "USERNAME": "Username",
     "PASSWORD": "Password",
-    "CONFIRM_PASSWORD": "Confirm your password"
+    "CONFIRM_PASSWORD": "Confirm your password",
+    "REGISTER": "Register",
+    "NEW": "New to CDB ?",
+    "ERROR": {
+      "USERNAME": "Username must be at least 5 characters long and musn't contain whitespaces.",
+      "PASSWORD": "Password must be at least 8 characters long and contain at least one digit, one lowercase and one uppercase.",
+      "PASSWORD_CONFIRM": "Password confirmation doesn't match the password"
+    }
   },
   "GENERAL":{
     "CREATE": "Create",
-    "CANCEL": "Cancel"
+    "CANCEL": "Cancel",
+    "CONFIRM": "Confirm",
+    "NO": "No",
+    "YES": "Yes"
   },
-  "ERROR": {
-
+  "PAGINATOR": {
+    "ITEMS":"Items per page",
+    "NEXT": "Next page",
+    "PREVIOUS": "Previous page",
+    "OF": "of",
+    "FIRST": "First page",
+    "LAST": "Last page"
   }
 }
