Changed translation and added animations for computer

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -31,8 +31,8 @@
     "COMPUTER": "Ordinateur",
     "CREATE": "Créer un ordinateur",
     "NAME": "Nom",
-    "INTRODUCED": "Introduit",
-    "DISCONTINUED": "Retiré",
+    "INTRODUCED": "Lancement",
+    "DISCONTINUED": "Retrait",
     "COMPANY": "Entreprise",
     "DELETE": "Supprimer",
     "DEL_COMPUTER": "Suprimmer l'ordinateur",
@@ -84,7 +84,7 @@
     "COMPUTER":"Nombre d'ordinateurs",
     "COMPUTER_NAME": "Nom d'ordinateur",
     "COMPANY_NAME": "Nom d'entreprise",
-    "INTRODUCED": "Introduction",
+    "INTRODUCED": "Lancement",
     "DISCONTINUED": "Retrait",
     "COMPANY": "Nom d'entreprise",
     "SORTING_OPTIONS": "Options de tri"
